Implemented error pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('content') }}">Educational pages</a>
+            <a class="nav-link" href="{{ url_for('educationalContent') }}">Educational pages</a>
           </li>
         </ul>
           <!-- END NAVBAR LINKS -->
