--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,3 +1,5 @@
 {% extends "base.html" %}
-<!-- Take the block "title" from base.html and gives it the value "dashboard"
 {% block title %} Dashboard {% endblock %}
+{% block card_name %} DASHBOARD CARD {% endblock %}
+{% block card_content %} DASHBOARD CARD CONTENT {% endblock %}
+{% block card_footer %} Happy reading {% endblock %}
