--- a/templates/educationalContent.html
+++ b/templates/educationalContent.html
@@ -1,3 +1,5 @@
 {% extends "base.html" %}
-<!-- Take the block "title" from base.html and gives it the value "content"
 {% block title %} Content {% endblock %}
+{% block card_name %} EDUCATIONAL CARD {% endblock %}
+{% block card_content %} EDUCATIONAL CARD CONTENT {% endblock %}
+{% block card_footer %} Happy reading {% endblock %}
