--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,2 +1,4 @@
 {% extends "base.html" %}
 {% block title %} 404 ERROR {% endblock %}
+{% block card_name %} 404 ERROR {% endblock %}
+{% block card_content %} Please return to the homepage {% endblock %}
