--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -1,2 +1,4 @@
 {% extends "base.html" %}
 {% block title %} 500 ERROR {% endblock %}
+{% block card_name %} 500 ERROR {% endblock %}
+{% block card_content %} Please return to the homepage {% endblock %}
