--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
 {% extends "base.html" %}
-<!-- Take the block "title" from base.html and gives it the value "homepade"
 {% block title %} Homepage {% endblock %}
+{% block card_name %} HOMEPAGE CARD {% endblock %}
+{% block card_content %} HOMEPAGE CARD CONTENT {% endblock %}
+{% block card_footer %} Happy reading {% endblock %}
