--- a/templates/errors/400.html
+++ b/templates/errors/400.html
@@ -1,2 +1,4 @@
 {% extends "base.html" %}
 {% block title %} 400 ERROR {% endblock %}
+{% block card_name %} 400 ERROR {% endblock %}
+{% block card_content %} Please return to the homepage {% endblock %}
