--- a/templates/errors/503.html
+++ b/templates/errors/503.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block title %} 503 ERROR {% endblock %}
+{% block card_image_source %} "/images/oops.jpg" {% endblock %}
 {% block card_name %} 503 ERROR {% endblock %}
 {% block card_content %} Please return to the homepage {% endblock %}
