--- a/templates/errors/400.html
+++ b/templates/errors/400.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block title %} 400 ERROR {% endblock %}
+{% block card_image_source %} "/images/oops.jpg" {% endblock %}
 {% block card_name %} 400 ERROR {% endblock %}
 {% block card_content %} Please return to the homepage {% endblock %}
