--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block title %} 403 ERROR {% endblock %}
+{% block card_image_source %} "/static/oops.jpg" {% endblock %}
 {% block card_name %} 403 ERROR {% endblock %}
 {% block card_content %} Please return to the homepage {% endblock %}
