--- a/templates/base.html
+++ b/templates/base.html
@@ -25,11 +25,11 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+            <a class="nav-link" href="{{ url_for('users.dashboard') }}">Dashboard</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('educationalContent') }}">Educational pages</a>
+            <a class="nav-link" href="{{ url_for('users.content') }}">Educational pages</a>
           </li>
         </ul>
           <!-- END NAVBAR LINKS -->
