Updated base.html so that block cards are now on individual pages.
This was done to make the website more extendable in the future.

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,13 @@
     </nav>
     <!-- END NAVBAR CODE -->
 
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
+
     <!-- CARD CODE -->
     <div class="card text-center">
         <div class="card mb-3">
