--- a/templates/errors/400.html
+++ b/templates/errors/400.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 {% block title %} 400 ERROR {% endblock %}
-{% block card_image_source %} "/images/oops.jpg" {% endblock %}
-{% block card_name %} 400 ERROR {% endblock %}
-{% block card_content %} Please return to the homepage {% endblock %}
+{{% block content %}
+<div class="card text-center shadow p-3 mb-5 bg-white rounded">
+        <div class="card mb-3">
+          <img src="" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">"Card title"</h5>
+            <p class="card-text">"Card text"</p>
+            <p class="card-text"><small class="text-muted">"Card footer"</small></p>
+          </div>
+        </div>
+</div>
+{% endblock %}
