--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,15 @@
 {% extends "base.html" %}
-{% block title %} Homepage {% endblock %}
-{% block card_name %} HOMEPAGE CARD {% endblock %}
-{% block card_content %} HOMEPAGE CARD CONTENT {% endblock %}
-{% block card_footer %} Happy reading {% endblock %}
+{% block title %}Home {% endblock %}
+
+{% block content %}
+<div class="card text-center shadow p-3 mb-5 bg-white rounded">
+        <div class="card mb-3">
+          <img src="" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">"Card title"</h5>
+            <p class="card-text">"Card text"</p>
+            <p class="card-text"><small class="text-muted">"Card footer"</small></p>
+          </div>
+        </div>
+</div>
+{% endblock %}
