--- a/templates/base.html
+++ b/templates/base.html
@@ -49,18 +49,22 @@
         </div>
     </div>
 
-    <!-- CARD CODE -->
+
+    <!-- CARD CODE - Use this template when creating new blocks -->
+    <!--
     <div class="card text-center">
         <div class="card mb-3">
-          <img src={% block card_image_source %}{% endblock %} class="card-img-top" alt="...">
+          <img src="" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">{% block card_name %}{% endblock %}</h5>
-            <p class="card-text">{% block card_content %}{% endblock %}</p>
-            <p class="card-text"><small class="text-muted">{% block card_footer %}{% endblock %}</small></p>
+            <h5 class="card-title">Block title</h5>
+            <p class="card-text">Block text</p>
+            <p class="card-text"><small class="text-muted">Block footer</small></p>
           </div>
         </div>
     </div>
+    -->
     <!-- END CARD CODE -->
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
