--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,5 +1,16 @@
 {% extends "base.html" %}
 {% block title %} Login {% endblock %}
-{% block card_name %} LOGIN CARD {% endblock %}
-{% block card_content %} LOGIN CARD CONTENT {% endblock %}
-{% block card_footer %} Happy reading {% endblock %}
+{% block card_name %} LOGIN {% endblock %}
+{% block card_content %}
+<h1> Sign In</h1>
+<form action="", method="post">
+    {{ form.hidden_tag() }}
+    <p>{{form.username.label}}<br>
+    {{form.username(size=32)}}<br>
+    </p>
+    <p>{{form.password.label}}<br>
+    {{form.password(size=32)}}<br>
+    </p>
+    <p>{{ form.submit() }}</p>
+</form>
+{% endblock %}
