--- a/templates/content.html
+++ b/templates/content.html
@@ -5,9 +5,26 @@
         <div class="card mb-3">
           <img src="" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">"Card title"</h5>
-            <p class="card-text">"Card text"</p>
-            <p class="card-text"><small class="text-muted">"Card footer"</small></p>
+            <h5 class="card-title">KS1 - What do people do in forests?</h5>
+            <p class="card-text">
+                Lots of different people enjoy doing different things in forests. Some people
+            like to play and some people even work in forests!
+
+            Think about all the different times you have been in a forest. What have you done? It might be...
+                <br>- Walking
+                <br>- Riding your bike
+                <br>- Walking your dog
+                <br>- Having a picnic
+                <br>- Riding a horse
+                <br>- Camping
+                <br>- Learning
+                <br>- Playing
+
+
+
+            </p>
+            <p class="card-text"><small class="text-muted">Task - take a walk in a forest. Try and find as many
+                people doing these activites as possible!</small></p>
           </div>
         </div>
 </div>
