Added education content for KS2 students
"What is climate change?"

--- a/templates/content.html
+++ b/templates/content.html
@@ -19,12 +19,42 @@
                 <br>- Camping
                 <br>- Learning
                 <br>- Playing
-
-
-
             </p>
             <p class="card-text"><small class="text-muted">Task - take a walk in a forest. Try and find as many
                 people doing these activites as possible!</small></p>
+          </div>
+        </div>
+</div>
+
+    <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+        <div class="card mb-3">
+          <img src="https://www.un.org/sites/un2.un.org/files/climatechange11.jpg" class="card-img-top" alt="
+Cartoon image of the earth, looking at a rising thermometer.">
+          <div class="card-body">
+            <h5 class="card-title">KS2 - What is climate change?</h5>
+            <p class="card-text">
+                Climate change describes how our planet's average temperate, rainfall, wind and other weather condition
+                change over a long period of time.
+                <br>
+                <br><b>Weather</b>
+                <br>The daily conditions of the atmosphere over a specific, small local area
+                <br>
+
+                <br><b>Climate</b>
+                <br>The long-term weather pattern over a large region, area or the globe.
+                <br>
+
+                <br><b>Climate change</b>
+                <br>Describes how our planet's average temperature, rainfall, wind and other weather conditions
+                change over a long period of time.
+                <br>
+
+                <br><b>Global Warming</b>
+                <br>Describes the change in the Earth's average temperature over a long period of time.
+                <br>
+            </p>
+            <p class="card-text"><small class="text-muted">Task - do you think climate change is good, bad
+            or both? Write a paragraph explaining why.</small></p>
           </div>
         </div>
 </div>
