--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 
 
 <body>
+    <body style="font-family: 'Comic Sans MS'">
     <!-- NAVBAR CODE -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Educational Website</a>
