Updated images and alt text on educational pages

--- a/templates/content.html
+++ b/templates/content.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-3">
-          <img src="" class="card-img-top" alt="...">
+          <img src="https://www.worldlandtrust.org/wp-content/uploads/2017/10/Santa-cruz-forest-banner.jpg" class="card-img-top" alt="A forest">
           <div class="card-body">
             <h5 class="card-title">KS1 - What do people do in forests?</h5>
             <p class="card-text">
@@ -28,8 +28,8 @@
 
     <div class="card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-3">
-          <img src="https://www.un.org/sites/un2.un.org/files/climatechange11.jpg" class="card-img-top" alt="
-Cartoon image of the earth, looking at a rising thermometer.">
+          <img src="https://www.sparklebox.co.uk/wp-content/uploads/1-1080.jpg" class="card-img-top" alt="
+Banner saying 'climate change' with a sun, clouds and thermometer behind it.">
           <div class="card-body">
             <h5 class="card-title">KS2 - What is climate change?</h5>
             <p class="card-text">
