--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         <span class="navbar-text">
             {# TODO: ADD USERS USERNAME #}
             <div class="account-avatar">
-                <img src="../static/media/avatar.png" class="card-img-top" alt="Default Avatar">
+                <img src="../static/media/avatar.png" class="img-av" alt="Default Avatar">
                 <a class="nav-link" href="{{ url_for('users.account') }}">USERS NAME</a>
             </div>
         </span>
@@ -49,7 +49,7 @@
     </nav>
     <!-- END NAVBAR CODE -->
 
-    <div class="hero-body">
+    <div class="hero-body p-3">
         <div class="container has-text-centered p-3 mb-5">
             {% block content %}
             {% endblock %}
@@ -70,16 +70,16 @@
         </div>
     </div>
     -->
+    </body>
+</body>
+
     <footer>
         <div class="footer-copyright text-center py-2 bg-light">Copyright &copy; 2021 Team 8.</div>
     </footer>
 
-
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
 
 
 </html>
