Refactored to standardize

--- a/templates/account.html
+++ b/templates/account.html
@@ -36,7 +36,7 @@
     <div class="card mb-1">
           <img src="../static/media/group_avatar.png" class="card-img-av" alt="Default Avatar" style="float:left;width:72px;height:73px;">
           <div class="card-body">
-            <h1 class="Class-Dashboard">(Group)</h1>
+            <h1 class="class-dashboard">(Group)</h1>
             <p class="card-text"></p>
               <br>
               <p class="card-text">Teacher: </p>
