--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title> <!-- Allows for dynamic titles -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
 </head>
 
 
 
-<body>
-    <body style="font-family: 'Comic Sans MS'">
+<body style="font-family: 'Comic Sans MS'">
     <!-- NAVBAR CODE -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="/">Educational Website</a>
@@ -41,7 +40,7 @@
         <span class="navbar-text">
             {# TODO: ADD USERS USERNAME #}
             <div class="account-avatar">
-                <img src="../static/media/avatar.png" class="img-av" alt="Default Avatar">
+                <img src="{{ url_for('static', filename='media/avatar.png') }}" class="img-av" alt="Default Avatar">
                 <a class="nav-link" href="{{ url_for('users.account') }}">USERS NAME</a>
             </div>
         </span>
@@ -70,7 +69,6 @@
         </div>
     </div>
     -->
-    </body>
 </body>
 
     <footer>
