--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,14 +1,38 @@
 {% extends "base.html" %}
 {% block title %}Dashboard {% endblock %}
 {% block content %}
+<link rel="stylesheet" type="text/javascript" href="{{ url_for('static',filename='copytext.js') }}">
+
 <div class="card text-center shadow p-3 mb-5 bg-white rounded">
-        <div class="card mb-3">
-          <img src="" class="card-img-top" alt="...">
+    <a href="{{ url_for('users.create_group')}}" class="btn btn-success" >Create a New Group</a>
+    <div class="card mb-1">
           <div class="card-body">
-            <h5 class="card-title">"Card title"</h5>
-            <p class="card-text">"Card text"</p>
-            <p class="card-text"><small class="text-muted">"Card footer"</small></p>
+            <h1 class="group-dashboard">Your Groups</h1>
+              <br>
+              <table class="table">
+                  <tr>
+                      <th>Group Name</th>
+                      <th>Group Code</th>
+                  </tr>
+                  <tbody>
+                    {% for group in groups %}
+                        <tr>
+                            <td>
+                                <a style="text-decoration:none; color:black" href="/groups/{{group.id}}">{{ group.name }}</a>
+                            </td>
+                            <td>
+                                <div id="group-id">
+                                      {{ group.id }}
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+              </table>
+          </div>
+        </div>
           </div>
         </div>
 </div>
+
 {% endblock %}
