Updated error handling templates

--- a/templates/errors/410.html
+++ b/templates/errors/410.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}#
-{% block title %}Page Not Found{% endblock %}
+{% block title %}Gone{% endblock %}
 {% block content %}
 <div class="card text-center text-white shadow p-3 mb-5 bg-danger rounded mx-auto" style="width:40rem;">
           <div class="card-body">
-            <h3 class="card-title">Page Not Found</h3>
+            <h3 class="card-title">This page no longer exists.</h3>
           </div>
 </div>
 {% endblock %}
