--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -1,13 +1,9 @@
-{% extends "base.html" %}
+{% extends "base.html" %}#
+{% block title %}Forbidden{% endblock %}
 {% block content %}
-<div class="card text-center shadow p-3 mb-5 bg-white rounded">
-        <div class="card mb-3">
-          <img src="" class="card-img-top" alt="...">
+<div class="card text-center text-white shadow p-3 mb-5 bg-danger rounded mx-auto" style="width:40rem;">
           <div class="card-body">
-            <h5 class="card-title">"Card title"</h5>
-            <p class="card-text">"Card text"</p>
-            <p class="card-text"><small class="text-muted">"Card footer"</small></p>
+            <h3 class="card-title">You do not have access to this page.</h3>
           </div>
-        </div>
 </div>
 {% endblock %}
