--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,16 +1,48 @@
 {% extends "base.html" %}
-{% block title %} Login {% endblock %}
-{% block card_name %} LOGIN {% endblock %}
-{% block card_content %}
-<h1> Sign In</h1>
-<form action="", method="post">
-    {{ form.hidden_tag() }}
-    <p>{{form.username.label}}<br>
-    {{form.username(size=32)}}<br>
-    </p>
-    <p>{{form.password.label}}<br>
-    {{form.password(size=32)}}<br>
-    </p>
-    <p>{{ form.submit() }}</p>
-</form>
+{% block title %}Login{% endblock %}
+{% block content %}
+    <div class="card text-center shadow p-3 mb-5 bg-white rounded mx-auto my-auto" style="width: 35rem;">
+        <div class="card mb-1">
+          <div class="card-body">
+            <h3 class="title is-3">Login</h3>
+            <div class="box">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                        <span>{{ message }}</span>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <form method="POST" class="form" action="{{ url_for('users.login') }}">
+        {{ form.csrf_token }}
+            <div class="form-group col mb-6">
+                {{ form.username(class_="form-control", placeholder="Username") }}
+            </div>
+
+            <div class="form-group col mb-6">
+                {{ form.password(class_="form-control", placeholder="Password", size=32) }}
+            </div>
+
+            <div class="form-group col mb-6">
+                <div class="form-check float-left">
+                    <input type="checkbox" class="form-check-input" id="remember" name="remember_me">
+                    <label class="form-check-label" for="remember">
+                        Remember me
+                    </label>
+            </div>
+                <div class="form-group col mb-6 float-left">
+                    {{ form.submit(class_="btn btn-success is-centered") }}
+                </div>
+            </div>
+
+        </form>
+            </div>
+        </div>
+    </div>
+ </div>
 {% endblock %}
