--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,9 @@
 {% block content %}
 <div class="card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-3">
-          <img src="" class="card-img-top" alt="...">
+          <img src="" class="card-img-top" alt="">
           <div class="card-body">
-            <h5 class="card-title">"Card title"</h5>
-            <p class="card-text">"Card text"</p>
-            <p class="card-text"><small class="text-muted">"Card footer"</small></p>
+            <h5 class="card-title">THIS PAGE WILL BE USED AS A LANDING PAGE WITH LOGO + POSSIBLE ANIMATION</h5>
           </div>
         </div>
 </div>
