--- a/templates/groups/create_students.html
+++ b/templates/groups/create_students.html
@@ -20,12 +20,12 @@
                 {% endwith %}
                 <form method="POST" action="{{ url_for('users.create_students', group_id=group_id) }}">
                 {{ form.csrf_token }}
-                        <div class="form-group col mb-6">
-                            {{ form.names(class="form-control", rows=15) }}
-                        </div>
-                        <div>
-                        {{ form.submit(class="btn btn-success btn-is-centered") }}
-                    </div>
+                <div class="form-group col mb-6">
+                    {{ form.names(class="form-control", rows=15, placeholder="Example:\nMichael Brown\nJulia Webster") }}
+                </div>
+                <div>
+                    {{ form.submit(class="btn btn-success btn-is-centered") }}
+                </div>
                 </form>
             </div>
         </div>
