--- a/templates/base.html
+++ b/templates/base.html
@@ -3,48 +3,65 @@
 <head>
   <meta charset="UTF-8">
     <meta name="description" content="Fun Educational Learning Tool For Groups">
-    <meta name="keywords" content="Education, Primary School, Children, Deforestation, School, Class, Online Learning">
+    <meta name="keywords" content="Education, Primary School, Climate Change, COVID Learning, Children, Deforestation, School, Class, Online Learning">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title> <!-- Allows for dynamic titles -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
 </head>
 
-
-
-<body style="font-family: 'Comic Sans MS'">
+<body style="font-family: 'Comic Sans MS', serif">
     <!-- NAVBAR CODE -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">Educational Website</a>
+      <a class="navbar-brand" href="/">Educational Website<span class="sr-only">(current)</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
           <!-- NAVBAR LINKS -->
         <ul class="navbar-nav mr-auto" style="margin:0; padding:10px;">
+        {% if current_user.is_authenticated and current_user.role == 'teacher' %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ url_for('users.dashboard') }}">Dashboard</a>
           </li>
-
+        {% endif %}
+        {% if current_user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('users.dashboard') }}">Dashboard</a>
+                <a class="nav-link" href="{{ url_for('users.content') }}">Educational Content</a>
           </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('users.content') }}">Educational Content</a>
-          </li>
+        {% endif %}
         </ul>
           <!-- END OF LEFT SIDE OF NAVBAR LINKS -->
 
           <!-- RIGHT SIDE OF NAVBAR ACCOUNT LINK-->
-        <span class="navbar-text">
-            {# TODO: ADD USERS USERNAME #}
-            <div class="account-avatar">
-                <img src="{{ url_for('static', filename='media/avatar.png') }}" class="img-av" alt="Default Avatar">
-                <a class="nav-link" href="{{ url_for('users.account') }}">USERS NAME</a>
-            </div>
-        </span>
+
       </div>
+        <span class="navbar-text">
+          {% if current_user.is_authenticated %}
+              <div class="account-avatar">
+                <div class="btn-group">
+                    <img src="{{ url_for('static', filename='media/avatar.png') }}" class="img-av" alt="Default Avatar">
+                    <button type="button" class="btn dropdown-toggle shadow-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ current_user.name }}</button>
+                    <div class="dropdown-menu dropdown-menu-right">
+                        <a class="dropdown-item" href="{{ url_for('users.account', _username=current_user.username) }}">Account</a>
+                        <a class="dropdown-item" href="{{ url_for('users.change_password', _username=current_user.username) }}">Change Password</a>
+                        <a class="dropdown-item" href="{{ url_for('users.join_group', _username=current_user.username) }}">Join A Group</a>
+                    <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ url_for('users.logout') }}">Logout</a>
+                    </div>
+                </div>
+              </div>
+        {% else %}
+                <ul class="navbar-nav float-right" style="align-content: end">
+                  <li class="nav-item">
+                      <a class="nav-link" href="{{ url_for('users.login') }}">Login</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="{{ url_for('users.register') }}">Register</a>
+                  </li>
+              </ul>
+          {% endif %}
+        </span>
     </nav>
     <!-- END NAVBAR CODE -->
 
@@ -72,7 +89,7 @@
 </body>
 
     <footer>
-        <div class="footer-copyright text-center py-2 bg-light">Copyright &copy; 2021 Team 8.</div>
+        <div class="footer-copyright text-center py-2 bg-light">Copyright &copy; 2022 Climate 4 Kids.</div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
