--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -18,29 +18,32 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-        <form method="POST" class="form" action="{{ url_for('users.login') }}">
-        {{ form.csrf_token }}
-            <div class="form-group col mb-6">
-                {{ form.username(class_="form-control", placeholder="Username") }}
-            </div>
-
-            <div class="form-group col mb-6">
-                {{ form.password(class_="form-control", placeholder="Password", size=32) }}
-            </div>
-
-            <div class="form-group col mb-6">
-                <div class="form-check float-left">
-                    <input type="checkbox" class="form-check-input" id="remember" name="remember_me">
-                    <label class="form-check-label" for="remember">
-                        Remember me
-                    </label>
-            </div>
-                <div class="form-group col mb-6 float-left">
-                    {{ form.submit(class_="btn btn-success is-centered") }}
+                <!-- Check if login attempts is less than 4 -->
+        {% if not session['logins'] or session['logins'] < 4 %}
+            <form method="POST" class="form" action="{{ url_for('users.login') }}">
+            {{ form.csrf_token }}
+                <div class="form-group col mb-6">
+                    {{ form.username(class_="form-control", placeholder="Username") }}
                 </div>
-            </div>
 
-        </form>
+                <div class="form-group col mb-6">
+                    {{ form.password(class_="form-control", placeholder="Password", size=32) }}
+                </div>
+
+                <div class="form-group col mb-6">
+                    <div class="form-check float-left">
+                        <input type="checkbox" class="form-check-input" id="remember" name="remember_me">
+                        <label class="form-check-label" for="remember">
+                            Remember me
+                        </label>
+                </div>
+                    <div class="form-group col mb-6 float-left">
+                        {{ form.submit(class_="btn btn-success is-centered") }}
+                    </div>
+                </div>
+
+            </form>
+        {% endif %}
             </div>
         </div>
     </div>
