--- a/templates/content.html
+++ b/templates/content.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
-{% block title %}Educational Content{% endblock %}
+{% block title %}Climate 4 Kids | Content{% endblock %}
 {% block content %}
+
 {#    {% if current_user.key_stage == 1 %} FIND A WAY TO GET THE CURRENT_USER's KEY_STAGE#}
 <div class="card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-1">
           <img src="https://www.worldlandtrust.org/wp-content/uploads/2017/10/Santa-cruz-forest-banner.jpg" class="card-img-top" alt="A forest">
-          <div class="card-body">
+          <div class="card-body" style="font-family: 'Comic Sans MS', serif">
             <h5 class="card-title">KS1 - What do people do in forests?</h5>
             <p class="card-text">
                 Lots of different people enjoy doing different things in forests. Some people
@@ -32,7 +33,7 @@
         <div class="card mb-1">
           <img src="https://www.sparklebox.co.uk/wp-content/uploads/1-1080.jpg" class="card-img-top" alt="
 Banner saying 'climate change' with a sun, clouds and thermometer behind it.">
-          <div class="card-body">
+          <div class="card-body" style="font-family: 'Comic Sans MS', serif">
             <h5 class="card-title">KS2 - What is climate change?</h5>
             <p class="card-text">
                 Climate change describes how our planet's average temperate, rainfall, wind and other weather condition
