--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Dashboard {% endblock %}
+{% block title %}Climate 4 Kids | Dashboard{% endblock %}
 {% block content %}
 <link rel="stylesheet" type="text/javascript" href="{{ url_for('static',filename='copytext.js') }}">
 
