--- a/templates/groups/edit_group.html
+++ b/templates/groups/edit_group.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %} Climate 4 Kids | Edit Group{% endblock %}
 {% block content %}
 
     <div class="card text-center shadow p-3 mb-5 bg-white rounded">
