--- a/templates/quiz_results.html
+++ b/templates/quiz_results.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Educational Page {% endblock %}
+{% block title %}Climate 4 Kids | Quiz{% endblock %}
 {% block content %}
 <div class="card text-center shadow p-3 mb-5 bg-blue rounded">
         <div class="card mb-3">
