--- a/templates/quizzes.html
+++ b/templates/quizzes.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Quizzes {% endblock %}
+{% block title %}Climate 4 Kids | Quizzes{% endblock %}
 {% block content %}
 <ul>
     {% for item in nav.quiz_navbar %}
