--- a/templates/webadmin.html
+++ b/templates/webadmin.html
@@ -1,6 +1,6 @@
 <!-- Author: Harry Hamilton -->
 {% extends "base.html" %}
-{% block title %} Web Admin Dashboard {% endblock %}
+{% block title %}Climate 4 Kids | Admin{% endblock %}
 
 {% block content %}
     <div class="card text-center shadow p-3 mb-5 bg-white rounded">
