--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                     <button type="button" class="btn dropdown-toggle shadow-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ current_user.name }}</button>
                     <div class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" href="{{ url_for('users.account', _username=current_user.username) }}">Account</a>
-                        <a class="dropdown-item" href="{{ url_for('users.change_password', _username=current_user.username) }}">Change Password</a>
+                        <a class="dropdown-item" href="{{ url_for('users.change_password') }}">Change Password</a>
                         <a class="dropdown-item" href="{{ url_for('users.join_group', _username=current_user.username) }}">Join A Group</a>
                     <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{{ url_for('users.logout') }}">Logout</a>
