--- a/templates/groups/group.html
+++ b/templates/groups/group.html
@@ -2,11 +2,13 @@
 {% block title %} Climate 4 Kids | {{ group.name }}{% endblock %}
 {% block content %}
 
+    <script src="{{ url_for('static', filename='js/warning.js') }}"></script>
+
 <div class="card text-center shadow p-3 mb-5 bg-white rounded">
     <div class="card mb-1">
           <img src="{{ url_for('static', filename='media/group-avatar.png') }}" class="card-img-av" alt="Default Avatar" style="float:left;width:72px;height:73px;">
           <a href="{{ url_for('users.edit_group', group_id=group.id)}}" id="card-button-edit" class="btn btn-success">Edit Group</a>
-          <a href="{{ url_for('users.delete_group', group_id=group.id)}}" id="card-button-del" onclick="return confirm('Are you sure you want to delete this group?');" class="btn btn-danger">Delete Group</a>
+          <a href="{{ url_for('users.delete_group', group_id=group.id)}}" id="card-button-del" onclick="onClick()" class="btn btn-danger">Delete Group</a>
           <div class="card-body">
             <h1 class="group-dashboard">{{group.name}}</h1>
             <p class="card-text"></p>
