--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -11,15 +11,18 @@
                 <div class="form-group col mb-6">{{ form.username(class_="form-control", placeholder="Username") }}
                 </div>
                 <div class="form-group col mb-6">
-                    {{ form.current_password(class_="form-control", placeholder="Current password", size=32) }}
+                    {{ form.current_password(class_="form-control", placeholder="Current password", size=99) }}
                 </div>
 
                  <div class="form-group col mb-6">
-                    {{ form.new_password(class_="form-control", placeholder="New password", size=32) }}
+                    {{ form.new_password(class_="form-control", placeholder="New password", size=99) }}
+                     {% for error in form.new_password.errors %}
+                        {{ error }}
+                     {% endfor %}
                 </div>
 
                  <div class="form-group col mb-6">
-                    {{ form.confirm_new_password(class_="form-control", placeholder="Confirm new password", size=32) }}
+                    {{ form.confirm_new_password(class_="form-control", placeholder="Confirm new password", size=99) }}
                 </div>
 
                 <div class="form-group col mb-6">
