--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -23,6 +23,9 @@
 
                  <div class="form-group col mb-6">
                     {{ form.confirm_new_password(class_="form-control", placeholder="Confirm new password", size=99) }}
+                     {% for error in form.confirm_new_password.errors %}
+                        {{ error }}
+                     {% endfor %}
                 </div>
 
                 <div class="form-group col mb-6">
