Added proper quiz interface for account page, updated quiz pages to be more readable, corrected some typos in the new quizzes

--- a/templates/quiz_question.html
+++ b/templates/quiz_question.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="card text-start shadow p-3 mb-5 bg-white rounded">
      <div class="card mb-1">
-          <div class="card-body">
+          <div class="card-body" style="font-family: 'Comic Sans MS', serif">
             <ul>
                 <form method="POST">
                     {% for question in form.questions %}
