--- a/templates/quiz_results.html
+++ b/templates/quiz_results.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="card text-center shadow p-3 mb-5 bg-blue rounded">
         <div class="card mb-3">
-          <div class="card-body">
+          <div class="card-body" style="font-family: 'Comic Sans MS', serif">
             <h5 class="card-title">Quiz Complete</h5>
             <p class="card-text">
                 Score: {{ quiz_score }}%
