--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -6,6 +6,18 @@
           <div class="card-body">
             <h3 class="title is-3">Change password</h3>
             <div class="box">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                        <span>{{ message }}</span>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
             <form method="POST" class="form" action="{{ url_for('users.change_password') }}">
                 {{ form.csrf_token }}
                 <div class="form-group col mb-6">{{ form.username(class_="form-control", placeholder="Username") }}
